--- a/src/assets/scss/animations.scss
+++ b/src/assets/scss/animations.scss
@@ -34,7 +34,25 @@ $vh: calc(100vh/900);
   z-index: 2;
 }
 
-.pg-active {
+.main-view__gray-line .show.gray-line {
+  width: 100vw;
+  transition: width 1s 2s ease-in-out;
+}
+
+.show.main-view__button-text {
+  height: 4rem;
+  transition: 1s 1.2s ease-in-out;
+  &.row3 {
+    height: 6rem;
+  }
+}
+
+.show.main-view__arrow {
+  height: 2.5rem;
+  transition: 1s 1.2s ease-in-out;
+}
+
+.intoAnimation {
   & .section-bg {
     & img {
       height: 100%;
@@ -42,21 +60,7 @@ $vh: calc(100vh/900);
       transition: all 1s ease-in-out;
     }
   }
-  & .main-view__gray-line {
-    width: 100%;
-    transition: width 1s 2s ease-in-out;
-  }
-  & .main-view__button-text {
-    height: 4rem;
-    transition: 1s 1.2s ease-in-out;
-    &.row3 {
-      height: 6rem;
-    }
-  }
-  & .main-view__arrow {
-    height: 2.5rem;
-    transition: 1s 1.2s ease-in-out;
-  }
+
 }
 
 .header {
@@ -86,11 +90,6 @@ $vh: calc(100vh/900);
   transition: 0.2s linear;
 }
 
-.pg-active .animation-button-height {
-  height: 37.5rem;
-  transition: 1s ease-in-out;
-}
-
 .animation-slide-up {
   transform: translateY(105%);
   transition: all 0.3s ease-in-out;
@@ -100,13 +99,13 @@ $vh: calc(100vh/900);
   }
 }
 
-.pg-active .animation-slide-up {
+.intoAnimation .animation-slide-up {
   transform: translateY(0);
   transition-duration: 0.5s;
   transition: all 0.5s ease-in-out;
 }
 
-.pg-active .animation-slide-up.duration-1 {
+.intoAnimation .animation-slide-up.duration-1 {
   transition-duration: 1s;
 }
 
@@ -119,13 +118,13 @@ $vh: calc(100vh/900);
   }
 }
 
-.pg-active .animation-slide-down {
+.intoAnimation .animation-slide-down {
   transform: translateY(0);
   transition-duration: 0.5s;
   transition: all 0.5s ease-in-out;
 }
 
-.pg-active .animation-slide-down.duration-1 {
+.intoAnimation .animation-slide-down.duration-1 {
   transition-duration: 1s;
 }
 
@@ -138,7 +137,7 @@ $vh: calc(100vh/900);
   }
 }
 
-.pg-active .animation-slide-right {
+.intoAnimation .animation-slide-right {
   transform: translateX(0);
   transition-duration: 0.5s;
   transition: all 0.5s ease-in-out;
@@ -153,84 +152,82 @@ $vh: calc(100vh/900);
   }
 }
 
-.pg-active .animation-slide-left {
+.intoAnimation .animation-slide-left {
   transform: translateX(0);
   transition-duration: 0.5s;
   transition: all 0.5s ease-in-out;
 }
 
-.pg-active .animation-delay-01 {
+.intoAnimation .animation-delay-01 {
   transition-delay: 0.1s !important;
 }
 
-.pg-active .animation-delay-02 {
+.intoAnimation .animation-delay-02 {
   transition-delay: 0.2s !important;
 }
 
-.pg-active .animation-delay-03 {
+.intoAnimation .animation-delay-03 {
   transition-delay: 0.3s !important;
 }
 
-.pg-active .animation-delay-05 {
+.intoAnimation .animation-delay-05 {
   transition-delay: 0.5s !important;
 }
 
-.pg-active .animation-delay-06 {
+.intoAnimation .animation-delay-06 {
   transition-delay: 0.6s !important;
 }
-.pg-active .animation-delay-07 {
+.intoAnimation .animation-delay-07 {
   transition-delay: 0.7s !important;
 }
 
-.pg-active .animation-delay-08 {
+.intoAnimation .animation-delay-08 {
   transition-delay: 0.8s !important;
 }
-.pg-active .animation-delay-09 {
+.intoAnimation .animation-delay-09 {
   transition-delay: 0.9s !important;
 }
 
-.pg-active .animation-delay-1 {
+.intoAnimation .animation-delay-1 {
   transition-delay: 1s !important;
 }
-.pg-active .animation-delay-11 {
+.intoAnimation .animation-delay-11 {
   transition-delay: 1.1s !important;
 }
-.pg-active .animation-delay-12 {
+.intoAnimation .animation-delay-12 {
   transition-delay: 1.2s !important;
 }
-.pg-active .animation-delay-13 {
+.intoAnimation .animation-delay-13 {
   transition-delay: 1.3s !important;
 }
-.pg-active .animation-delay-14 {
+.intoAnimation .animation-delay-14 {
   transition-delay: 1.4s !important;
 }
-.pg-active .animation-delay-15 {
+.intoAnimation .animation-delay-15 {
   transition-delay: 1.5s !important;
 }
-.pg-active .animation-delay-16 {
+.intoAnimation .animation-delay-16 {
   transition-delay: 1.6s !important;
 }
-.pg-active .animation-delay-17 {
+.intoAnimation .animation-delay-17 {
   transition-delay: 1.7s !important;
 }
-.pg-active .animation-delay-18 {
+.intoAnimation .animation-delay-18 {
   transition-delay: 1.8s !important;
 }
-.pg-active .animation-delay-19 {
+.intoAnimation .animation-delay-19 {
   transition-delay: 1.9s !important;
 }
-.pg-active .animation-delay-2 {
+.intoAnimation .animation-delay-2 {
   transition-delay: 2s !important;
 }
-.pg-active .animation-delay-3 {
+.intoAnimation .animation-delay-3 {
   transition-delay: 3s !important;
 }
 
 .projects-swiper-slide__wrapper {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  align-items: end;
   position: absolute;
   z-index: 1;
   bottom: 0;
@@ -242,13 +239,13 @@ $vh: calc(100vh/900);
   }
 }
 
-.pg-active.animation-state-0 .projects .projects-swiper-slide__wrapper img {
+.intoAnimation .projects .projects-swiper-slide__wrapper img {
   height: calc(100vh - 40rem);
   transform: scale(1.2);
   transition: 1s;
 }
 
-.pg-active.animation-state-1 .projects .projects-swiper-slide__wrapper img {
+.intoAnimation .projects .projects-swiper-slide__wrapper img {
   height: 100vh;
   transform: scale(1);
   transition: 1s;
@@ -262,103 +259,103 @@ $vh: calc(100vh/900);
   animation: swiper-clip 0.8s ease-in-out forwards;
 }
 
-.pg-active.animation-state-0 .projects__gray-line {
+.intoAnimation .projects__gray-line {
   width: 100%;
   bottom: $vh * 257;
   transition: width 1s 2s, bottom 1s;
 }
 
-.pg-active.animation-state-1 .projects__gray-line {
+.projects__gray-line .show.gray-line {
   width: 100%;
   bottom: $vh * 378;
   transition: width 1s 1s, bottom 1s;
 }
 
-.pg-active.animation-state-0 .projects-swiper-slide__content {
+.projects__gray-line .show.gray-line {
+  width: 100%;
+  transition: width 1s 1s, bottom 1s;
+}
+
+.intoAnimation .projects-swiper-slide__content {
   bottom: $vh * 260;
   transition: 1s;
 }
-.pg-active.animation-state-1 .projects-swiper-slide__content {
+.intoAnimation .projects-swiper-slide__content {
   bottom: $vh * 381;
   transition: 1s;
 }
 
-.pg-active.animation-state-0 .projects-swiper-slide__title-animation {
-  height: 7.2rem;
-  transition: 1s 2s;
-}
-
-.pg-active.animation-state-1 .projects-swiper-slide__title-animation {
+.show.projects-swiper-slide__title-animation {
   height: 7.2rem;
   transition: 1s 1s;
 }
 
-.pg-active.animation-state-0 .projects-swiper-slide__text-animation {
+.intoAnimation .projects-swiper-slide__text-animation {
   height: 2rem;
   transition: 1s 2.3s;
 }
 
-.pg-active.animation-state-1 .projects-swiper-slide__text-animation {
+.intoAnimation .projects-swiper-slide__text-animation {
   height: 2rem;
   transition: 1s 1.3s;
 }
 
-.pg-active.projects-section.animation-state-0 .animation-button-height {
+.intoAnimation.projects-section .animation-button-height {
   height: 0;
   transition: 1s;
 }
 
-.pg-active.projects-section.animation-state-1 .animation-button-height {
+.intoAnimation.projects-section .animation-button-height {
   height: 37.5rem;
   transition: 1s 1s;
 }
-.pg-active.premium-section.animation-state-1 .animation-button-height {
+.intoAnimation.premium-section .animation-button-height {
   height: 0;
   transition: 1s 0s;
 }
 
-.pg-active.premium-section.animation-state-0 .animation-button-height {
+.intoAnimation.premium-section .animation-button-height {
   height: 37.5rem;
   transition: 1s;
 }
 
-.pg-active.projects-section.animation-state-0 .main-view__arrow {
+.intoAnimation.projects-section .main-view__arrow {
   height: 0;
   transition: 1s;
 }
 
-.pg-active.projects-section.animation-state-1 .main-view__arrow {
+.intoAnimation.projects-section .main-view__arrow {
   height: 2.5rem;
   transition: 1s 1s;
 }
-.pg-active.premium-section.animation-state-1 .main-view__arrow {
+.intoAnimation.premium-section .main-view__arrow {
   height: 0;
   transition: 1s;
 }
 
-.pg-active.premium-section.animation-state-0 .main-view__arrow {
+.intoAnimation.premium-section .main-view__arrow {
   height: 2.5rem;
   transition: 1s;
 }
 
-.pg-active.projects-section.animation-state-0 .main-view__button-text {
+.intoAnimation.projects-section .main-view__button-text {
   height: 0;
   transition: 1s;
 }
-.pg-active.projects-section.animation-state-1 .main-view__button-text {
+.intoAnimation.projects-section .main-view__button-text {
   height: 4rem;
   transition: 1s 1s;
 }
-.pg-active.premium-section.animation-state-1 .main-view__button-text {
+.intoAnimation.premium-section .main-view__button-text {
   height: 0;
   transition: 1s;
 }
-.pg-active.premium-section.animation-state-0 .main-view__button-text {
+.intoAnimation.premium-section .main-view__button-text {
   height: 4rem;
   transition: 1s;
 }
 
-.pg-active .supervisors__gray-line {
+.intoAnimation .supervisors__gray-line {
   width: 100%;
   transition: 1s 2s;
 }
