--- a/src/assets/scss/animations.css
+++ b/src/assets/scss/animations.css
@@ -291,12 +291,7 @@
   transition: 1s 1s;
 }
 
-.intoAnimation .projects-swiper-slide__text-animation {
-  height: 2rem;
-  transition: 1s 2.3s;
-}
-
-.intoAnimation .projects-swiper-slide__text-animation {
+.show.projects-swiper-slide__text-animation {
   height: 2rem;
   transition: 1s 1.3s;
 }
