--- a/src/assets/scss/mobile.css
+++ b/src/assets/scss/mobile.css
@@ -42,9 +42,13 @@
   .header__container {
     width: 36.1rem;
     justify-content: space-between;
+    align-items: center;
   }
   .header {
-    margin-top: 1.6rem;
+    background: rgba(0, 0, 0, 0.5);
+    margin: 0;
+    padding-top: 1.6rem;
+    padding-bottom: 1.6rem;
   }
   .header path {
     fill: #140E0A;
@@ -242,11 +246,17 @@
   .gray-line {
     width: 1px;
     height: 0.1rem;
-    background-color: rgba(255, 254, 248, 0.3);
+    background-color: rgba(255, 254, 248, 0.4);
     transition: 0.2s 0s linear;
+  }
+  .gray-line.dark {
+    background-color: rgba(20, 14, 10, 0.16);
   }
   .mb-8 {
     margin-bottom: 8rem;
+  }
+  section.specialists {
+    min-height: auto;
   }
   .supervisors__top {
     width: 36.1rem;
@@ -258,11 +268,9 @@
     font-size: 3.2rem;
     line-height: 1.1;
   }
-  .supervisors {
-    height: 97.6rem;
-  }
-  .intoAnimation .mid-size .animation-button-height {
+  .mid-size .animation-button-height.show {
     height: 19rem;
+    transition: 1s 1s;
   }
   .mid-size .round-button {
     width: 18rem;
@@ -298,7 +306,6 @@
     position: relative;
     overflow: hidden;
     margin-bottom: 2.4rem;
-    height: 0;
     transition: 1s;
   }
   .supervisors__type {
@@ -313,14 +320,19 @@
   .supervisors__sub-title br {
     display: none;
   }
+  .supervisors__content-main--imgs {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 4rem;
+    height: 25rem;
+    position: relative;
+    overflow: hidden;
+  }
   .supervisors__content-main {
     display: block;
     height: unset;
   }
   .supervisors__content-first {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 11rem;
     margin-right: 0;
   }
@@ -328,9 +340,6 @@
     height: 25rem;
   }
   .supervisors__content-second {
-    position: absolute;
-    top: 0;
-    right: 0;
     width: 23.5rem;
     margin-right: 0;
   }
@@ -342,13 +351,11 @@
   }
   .supervisors__content-text {
     width: 36.1rem;
-    padding-top: 27.4rem;
     font-size: 1.4rem;
   }
   .supervisors__content-text .text {
     position: relative;
     overflow: hidden;
-    height: 0;
     transition: 1s;
   }
   .intoAnimation .supervisors__content-top {
@@ -499,7 +506,6 @@
   }
   .services-list {
     margin-top: 2.1rem;
-    height: 38.5rem;
     position: relative;
     overflow: hidden;
     flex-wrap: wrap;
@@ -508,7 +514,8 @@
     height: 38.5rem;
     width: 17.2rem;
     position: relative;
-    transform: translateY(0);
+  }
+  .mb-4 {
     margin-bottom: 4rem;
   }
   .services__container {
@@ -540,14 +547,6 @@
     transform: translateY(0);
     transition: 1s 1.2s;
   }
-  .intoAnimation .services-list__item {
-    transform: translateY(0);
-    transition: 1s;
-  }
-  .intoAnimation .services-list__item {
-    transform: translateY(-42.5rem);
-    transition: 1s;
-  }
   .services-desc__container {
     width: 100%;
     padding: 0;
@@ -578,16 +577,18 @@
   }
   .services-desc__content {
     display: block;
-    height: 50rem;
     position: relative;
     overflow: hidden;
+  }
+  .pb-8 {
+    padding-bottom: 8rem;
   }
   .services-desc__col {
     display: block;
     width: 100%;
     position: relative;
     overflow: hidden;
-    height: 50rem;
+    height: auto;
     transition: 1s;
   }
   .services-desc__img-wrapper {
@@ -610,18 +611,6 @@
   .services-desc__text-spicer {
     height: 2rem;
   }
-  .intoAnimation .services-desc__top {
-    height: 16.7rem;
-    transition: 1s;
-  }
-  .intoAnimation .services-desc__top {
-    height: 10.6rem;
-    transition: 1s;
-  }
-  .intoAnimation .services-desc__top {
-    height: 10.6rem;
-    transition: 1s;
-  }
   .services-desc__col:first-child .services-desc__img-wrapper {
     position: relative;
     overflow: hidden;
@@ -630,47 +619,8 @@
     height: 36.2rem;
     transition: 1s;
   }
-  .intoAnimation .services-desc__col:first-child .services-desc__img-wrapper {
-    height: 0;
-    margin-bottom: 0;
-    transition: 1s;
-  }
-  .intoAnimation .services-desc__col:first-child .services-desc__img-wrapper {
-    height: 0;
-    margin-bottom: 0;
-    transition: 1s;
-  }
   .services-desc__col:first-child {
     margin-bottom: 4rem;
-  }
-  .intoAnimation .services-desc__col:first-child {
-    height: 50rem;
-    transition: 1s;
-  }
-  .intoAnimation .services-desc__col:first-child {
-    height: 20.5rem;
-    transition: 1s;
-  }
-  .intoAnimation .services-desc__col:first-child {
-    height: 0;
-    margin-bottom: 0;
-    transition: 1s;
-  }
-  .intoAnimation .services-desc__content {
-    height: 50rem;
-    transition: 1s;
-  }
-  .intoAnimation .services-desc__content {
-    height: 60rem;
-    transition: 1s;
-  }
-  .intoAnimation .services-desc__content {
-    height: 60rem;
-    transition: 1s;
-  }
-  .intoAnimation .services-desc__col:last-child {
-    height: 60rem;
-    transition: 1s;
   }
   .services-desc__text-wrapper.sliced {
     width: 16rem;
@@ -679,24 +629,20 @@
     width: 19rem;
     height: 19rem;
     right: -1rem;
-    bottom: -6rem;
+    bottom: -8rem;
   }
   .services-desc__gray-line {
     bottom: 3rem;
-    width: 0;
+    width: 100%;
     transition: 1s;
   }
   .intoAnimation .services-desc__gray-line {
     width: 100%;
     transition: 1s 1s;
   }
-  .intoAnimation .services-desc__gray-line {
-    width: 0;
-    transition: 1s;
-  }
-  .intoAnimation .services-desc__gray-line {
-    width: 0;
-    transition: 1s;
+  .gray-line.show {
+    width: 100%;
+    transition: 1s 1s;
   }
   .specialists__content {
     width: 100%;
@@ -769,8 +715,9 @@
   }
   .premium__top-container {
     width: 36.1rem;
-    padding: 8rem 0 4rem;
+    padding: 0 0 9rem;
     display: block;
+    position: relative;
   }
   .premium__top-left {
     width: 100%;
@@ -779,6 +726,9 @@
     position: absolute;
     left: 1.6rem;
     bottom: 5rem;
+  }
+  .premium__video {
+    height: 100vh;
   }
   .premium__title {
     font-size: 3.2rem;
@@ -792,9 +742,6 @@
   .premium__top-text {
     margin-top: 0;
     margin-bottom: 1.6rem;
-  }
-  .intoAnimation .premium__top {
-    height: 52rem;
   }
   .premium__button {
     right: unset;
