--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -548,9 +548,7 @@ section.main-view {
   border-radius: 50%;
 }
 .services-desc__gray-line {
-  width: 0;
   height: 1px;
-  background-color: rgba(20, 14, 10, 0.16);
   position: absolute;
   bottom: 9rem;
   left: 0;
@@ -602,7 +600,6 @@ section.main-view {
 }
 .services-desc__img-animation {
   width: 30rem;
-  height: 0;
   position: relative;
   overflow: hidden;
 }
@@ -642,16 +639,11 @@ section.main-view {
   padding-bottom: 9rem;
 }
 
-.intoAnimation .mid-size .animation-button-height {
-  height: 30.5rem;
-  width: 30.5rem;
-}
-
 .mid-size .animation-button-height {
   width: 30.5rem;
 }
 
-.intoAnimation .services-desc__gray-line {
+.services-desc__gray-line {
   width: 100%;
   transition: 1s 1s;
 }
@@ -750,7 +742,6 @@ section.main-view {
   position: relative;
   overflow: hidden;
   width: 22.6rem;
-  height: 0;
   margin-right: 4rem;
   transition: 0.3s;
 }
@@ -758,7 +749,6 @@ section.main-view {
   position: relative;
   overflow: hidden;
   width: 45.3rem;
-  height: 0;
   margin-right: 4rem;
   transition: 0.3s;
 }
@@ -880,7 +870,6 @@ section.main-view {
 .services-list__item-animation {
   position: relative;
   overflow: hidden;
-  height: 0;
   transition: 0.3s;
 }
 .services-list__img-wrapper {
@@ -902,23 +891,6 @@ section.main-view {
 }
 .services-list__description {
   margin-top: 3rem;
-}
-
-.intoAnimation .services-list__item-animation {
-  height: 56rem;
-  transition: 1s 0.3s;
-}
-
-.intoAnimation .services-list__item:nth-child(2) .services-list__item-animation {
-  transition: 1s 0.4s;
-}
-
-.intoAnimation .services-list__item:nth-child(3) .services-list__item-animation {
-  transition: 1s 0.5s;
-}
-
-.intoAnimation .services-list__item:nth-child(4) .services-list__item-animation {
-  transition: 1s 0.6s;
 }
 
 .specialists {
@@ -1110,7 +1082,6 @@ section.main-view {
 }
 .premium__top {
   background-color: #FFFEF8;
-  position: absolute;
   width: 100%;
   top: 0;
   left: 0;
