--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -559,9 +559,7 @@ section {
     }
   }
   &__gray-line {
-    width: 0;
     height: 1px;
-    background-color: rgba(20, 14, 10, 0.16);
     position: absolute;
     bottom: 9rem;
     left: 0;
@@ -615,7 +613,6 @@ section {
   }
   &__img-animation {
     width: 30rem;
-    height: 0;
     position: relative;
     overflow: hidden;
   }
@@ -656,16 +653,11 @@ section {
   }
 }
 
-.intoAnimation .mid-size .animation-button-height {
-  height: 30.5rem;
-  width: 30.5rem;
-}
-
 .mid-size .animation-button-height {
   width: 30.5rem;
 }
 
-.intoAnimation .services-desc__gray-line {
+.services-desc__gray-line {
   width: 100%;
   transition: 1s 1s;
 }
@@ -764,7 +756,6 @@ section {
       position: relative;
       overflow: hidden;
       width: 22.6rem;
-      height: 0;
       margin-right: 4rem;
       transition: 0.3s;
     }
@@ -772,7 +763,6 @@ section {
       position: relative;
       overflow: hidden;
       width: 45.3rem;
-      height: 0;
       margin-right: 4rem;
       transition: 0.3s;
     }
@@ -898,7 +888,6 @@ section {
     &-animation {
       position: relative;
       overflow: hidden;
-      height: 0;
       transition: 0.3s;
     }
   }
@@ -922,23 +911,6 @@ section {
   &__description {
     margin-top: 3rem;
   }
-}
-
-.intoAnimation .services-list__item-animation {
-  height: 56rem;
-  transition: 1s 0.3s;
-}
-
-.intoAnimation .services-list__item:nth-child(2) .services-list__item-animation {
-  transition: 1s 0.4s;
-}
-
-.intoAnimation .services-list__item:nth-child(3) .services-list__item-animation {
-  transition: 1s 0.5s;
-}
-
-.intoAnimation .services-list__item:nth-child(4) .services-list__item-animation {
-  transition: 1s 0.6s;
 }
 
 .specialists {
@@ -1129,7 +1101,6 @@ section {
   }
   &__top {
     background-color: $primary-light-color;
-    position: absolute;
     width: 100%;
     top: 0;
     left: 0;
