--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -151,7 +151,6 @@ section.main-view {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #FFFEF8;
-  text-shadow: 1px 1px 1px black;
 }
 .main-view__button-anchor {
   position: absolute;
@@ -411,7 +410,6 @@ section.main-view {
   font-size: 1.4rem;
   line-height: 2.2rem;
   letter-spacing: 0.12em;
-  text-shadow: black 1px 1px 1px;
 }
 .projects-swiper-slide__text-animation {
   position: relative;
@@ -430,7 +428,6 @@ section.main-view {
   line-height: 1;
   text-transform: uppercase;
   letter-spacing: 0.04em;
-  text-shadow: 1px 1px 1px black;
   flex-grow: 1;
   height: 7.2rem;
 }
@@ -1399,11 +1396,6 @@ section.main-view {
   transition: 1s 0.8s;
 }
 
-.intoAnimation .piter__left-img-animation {
-  height: 25rem;
-  transition: 1s 0.8s;
-}
-
 .intoAnimation .piter__left-img img {
   transform: scale(1);
   transition: 1s 1s;
@@ -1412,11 +1404,6 @@ section.main-view {
 .intoAnimation .piter__middle img {
   transform: scale(1);
   transition: 1s 1s;
-}
-
-.intoAnimation .piter__title-animation {
-  height: 20rem;
-  transition: 1s;
 }
 
 .intoAnimation .piter__gray-line {
@@ -1544,14 +1531,11 @@ section.main-view {
 }
 
 .feedback__scroll {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   box-sizing: border-box;
   height: 100vh;
-  min-height: 76rem;
   width: 100%;
 }
 .feedback__content {
@@ -1751,9 +1735,6 @@ input.input-text, textarea.input-text {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
   width: 100%;
   z-index: 99;
 }
@@ -1811,7 +1792,6 @@ input.input-text, textarea.input-text {
   display: flex;
   justify-content: space-between;
   width: 144rem;
-  height: 0;
   transition: 0.3s;
   position: relative;
   overflow: hidden;
@@ -1844,14 +1824,12 @@ input.input-text, textarea.input-text {
   z-index: 2;
   top: 5rem;
   left: 5rem;
-  text-shadow: black 1px 1px 1px;
 }
 .services-section__item img {
   width: 70rem;
   height: 70rem;
   object-fit: cover;
   object-position: center;
-  transform: scale(1.2);
   transform-origin: center;
   transition: 1s;
 }
@@ -1981,7 +1959,6 @@ input.input-text, textarea.input-text {
   box-sizing: border-box;
   padding-left: 2rem;
   width: 54.7rem;
-  transform: translateX(60rem);
   transition: 0.3s;
 }
 .prices-design__field:before {
@@ -2014,10 +1991,6 @@ input.input-text, textarea.input-text {
 }
 .prices-design__item {
   width: 54.7rem;
-  height: 60rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 .prices-design__name {
   font-family: Forum, serif;
@@ -2164,7 +2137,6 @@ input.input-text, textarea.input-text {
 
 .services-section__item-bottom-button-animation {
   padding: 2.8rem 0;
-  transform: translateY(105%);
   transition: 0.3s;
 }
 
@@ -2185,11 +2157,6 @@ input.input-text, textarea.input-text {
 .intoAnimation .prices-design__img-animation img {
   transform: scale(1);
   transition: 1s;
-}
-
-.intoAnimation .prices-design__field {
-  transform: translateX(0);
-  transition: 1s 0.5s;
 }
 
 .price-supervision__scroll {
@@ -2263,7 +2230,6 @@ input.input-text, textarea.input-text {
   overflow: hidden;
   display: flex;
   align-items: end;
-  height: 0;
   transition: 0.3s;
 }
 .price-supervision__img img {
@@ -2278,16 +2244,6 @@ input.input-text, textarea.input-text {
 .intoAnimation .price-supervision__gray-line {
   width: 100%;
   transition: 1s 1s;
-}
-
-.intoAnimation .price-supervision__img-animation {
-  height: 70rem;
-  transition: 1s;
-}
-
-.intoAnimation .price-supervision__img-animation img {
-  transform: scale(1);
-  transition: 1s;
 }
 
 .price-assembly__scroll {
@@ -2878,8 +2834,10 @@ input.input-text, textarea.input-text {
 .about-advantages__gray-line {
   height: 1px;
   width: 0;
-  background: rgba(20, 14, 10, 0.16);
   transition: 0.3s;
+}
+.about-advantages__gray-line .gray-line {
+  background: rgba(20, 14, 10, 0.16);
 }
 .about-advantages__item {
   display: flex;
@@ -2946,9 +2904,18 @@ input.input-text, textarea.input-text {
   transition: 1s 1.5s;
 }
 
-.intoAnimation .about-advantages__item-animation {
-  height: 7.8rem;
-  transition: 1s 0.5s;
+.about-advantages__item-animation {
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: left center;
+  height: 7.8rem !important;
+  transition: 0.3s;
+}
+
+.show .about-advantages__item-animation {
+  opacity: 1;
+  transform: scale(1);
+  transition: 1s;
 }
 
 .contacts-page {
@@ -3549,8 +3516,10 @@ input.input-text, textarea.input-text {
 .faq-list__gray-line {
   height: 1px;
   width: 100%;
-  background: rgba(20, 14, 10, 0.16);
   margin: 1.5rem 0;
+}
+.faq-list__gray-line .gray-line {
+  background: rgba(20, 14, 10, 0.16);
 }
 .faq-list__item {
   display: grid;
@@ -3588,8 +3557,8 @@ input.input-text, textarea.input-text {
 }
 .faq-list__item-arrow {
   box-sizing: border-box;
-  width: 6rem;
-  height: 6rem;
+  width: 5.8rem;
+  height: 5.8rem;
   padding: 1rem;
   border: 1px solid rgba(20, 14, 10, 0.16);
   border-radius: 50%;
