--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -156,7 +156,6 @@ section {
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $primary-light-color;
-    text-shadow: 1px 1px 1px black;
   }
   &__button-anchor {
     position: absolute;
@@ -418,7 +417,6 @@ section {
     font-size: 1.4rem;
     line-height: 2.2rem;
     letter-spacing: 0.12em;
-    text-shadow: black 1px 1px 1px;
     &-animation {
       position: relative;
       overflow: hidden;
@@ -437,7 +435,6 @@ section {
     line-height: 1;
     text-transform: uppercase;
     letter-spacing: 0.04em;
-    text-shadow: 1px 1px 1px black;
     flex-grow: 1;
     height: 7.2rem;
     &-animation {
@@ -582,6 +579,9 @@ section {
     height: 30.5rem;
   }
   &__bottom {
+    position: absolute;
+    bottom: 4rem;
+    left: 0;
     &-text {
       font-size: 1.4rem;
       line-height: 1.4;
@@ -591,9 +591,7 @@ section {
     &-price {
       margin-top: 1.5rem;
     }
-    position: absolute;
-    bottom: 4rem;
-    left: 0;
+
   }
   &__text {
     width: 50rem;
@@ -1428,10 +1426,6 @@ section {
   height: 45rem;
   transition: 1s 0.8s;
 }
-.intoAnimation .piter__left-img-animation {
-  height: 25rem;
-  transition: 1s 0.8s;
-}
 .intoAnimation .piter__left-img img {
   transform: scale(1);
   transition: 1s 1s;
@@ -1439,11 +1433,6 @@ section {
 .intoAnimation .piter__middle img {
   transform: scale(1);
   transition: 1s 1s;
-}
-
-.intoAnimation .piter__title-animation {
-  height: 20rem;
-  transition: 1s;
 }
 
 .intoAnimation .piter__gray-line {
@@ -1576,14 +1565,11 @@ section {
 
 .feedback {
   &__scroll {
-    padding-top: 10rem;
-    padding-bottom: 10rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     box-sizing: border-box;
     height: 100vh;
-    min-height: 76rem;
     width: 100%;
   }
   &__content {
@@ -1786,9 +1772,6 @@ input.input-text, textarea.input-text {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
   width: 100%;
   z-index: 99;
   &__gray-line {
@@ -1846,7 +1829,6 @@ input.input-text, textarea.input-text {
       display: flex;
       justify-content: space-between;
       width: 144rem;
-      height: 0;
       transition: 0.3s;
       position: relative;
       overflow: hidden;
@@ -1879,14 +1861,12 @@ input.input-text, textarea.input-text {
       z-index: 2;
       top: 5rem;
       left: 5rem;
-      text-shadow: black 1px 1px 1px;
     }
     img {
       width: 70rem;
       height: 70rem;
       object-fit: cover;
       object-position: center;
-      transform: scale(1.2);
       transform-origin: center;
       transition: 1s;
     }
@@ -2017,7 +1997,6 @@ input.input-text, textarea.input-text {
     box-sizing: border-box;
     padding-left: 2rem;
     width: 54.7rem;
-    transform: translateX(60rem);
     transition: 0.3s;
     &:before {
       content: "";
@@ -2050,10 +2029,6 @@ input.input-text, textarea.input-text {
   }
   &__item {
     width: 54.7rem;
-    height: 60rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
   }
   &__name {
     font-family: Forum, serif;
@@ -2205,7 +2180,6 @@ input.input-text, textarea.input-text {
 
 .services-section__item-bottom-button-animation {
   padding: 2.8rem 0;
-  transform: translateY(105%);
   transition: 0.3s;
 }
 
@@ -2226,11 +2200,6 @@ input.input-text, textarea.input-text {
     transform: scale(1);
     transition: 1s;
   }
-}
-
-.intoAnimation .prices-design__field {
-  transform: translateX(0);
-  transition: 1s 0.5s;
 }
 
 .price-supervision {
@@ -2304,7 +2273,6 @@ input.input-text, textarea.input-text {
       overflow: hidden;
       display: flex;
       align-items: end;
-      height: 0;
       transition: 0.3s;
     }
     img {
@@ -2321,16 +2289,6 @@ input.input-text, textarea.input-text {
 .intoAnimation .price-supervision__gray-line {
   width: 100%;
   transition: 1s 1s;
-}
-
-.intoAnimation .price-supervision__img-animation {
-  height: 70rem;
-  transition: 1s;
-}
-
-.intoAnimation .price-supervision__img-animation img {
-  transform: scale(1);
-  transition: 1s;
 }
 
 .price-assembly {
@@ -2931,7 +2889,9 @@ input.input-text, textarea.input-text {
   &__gray-line {
     height: 1px;
     width: 0;
-    background: rgba(20, 14, 10, 0.16);
+    .gray-line {
+      background: rgba(20, 14, 10, 0.16);
+    }
     transition: 0.3s;
   }
   &__item {
@@ -3000,9 +2960,18 @@ input.input-text, textarea.input-text {
   transition: 1s 1.5s;
 }
 
-.intoAnimation .about-advantages__item-animation {
-  height: 7.8rem;
-  transition: 1s 0.5s;
+.about-advantages__item-animation {
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: left center;
+  height: 7.8rem !important;
+  transition: 0.3s;
+}
+
+.show .about-advantages__item-animation {
+  opacity: 1;
+  transform: scale(1);
+  transition: 1s;
 }
 
 .contacts-page {
@@ -3612,7 +3581,9 @@ input.input-text, textarea.input-text {
   &__gray-line {
     height: 1px;
     width: 100%;
-    background: rgba(20, 14, 10, 0.16);
+    .gray-line {
+      background: rgba(20, 14, 10, 0.16);
+    }
     margin: 1.5rem 0;
   }
   &__item {
@@ -3650,8 +3621,8 @@ input.input-text, textarea.input-text {
     }
     &-arrow {
       box-sizing: border-box;
-      width: 6rem;
-      height: 6rem;
+      width: 5.8rem;
+      height: 5.8rem;
       padding: 1rem;
       border: 1px solid rgba(20, 14, 10, 0.16);
       border-radius: 50%;
