--- a/src/assets/scss/animations.scss
+++ b/src/assets/scss/animations.scss
@@ -241,7 +241,7 @@ $vh: calc(100vh/900);
 
 .intoAnimation .projects .projects-swiper-slide__wrapper img {
   height: 100vh;
-  transform: scale(1.4);
+  transform: scale(1.6);
   transition: 1s;
 }
 .fullscreen.projects .projects-swiper-slide__wrapper img {
@@ -275,14 +275,39 @@ $vh: calc(100vh/900);
   transition: 1s;
 }
 
-.fullscreen .show.projects-swiper-slide__title-animation {
+.isSelected .projects-swiper-slide__title-animation {
   height: 7.2rem;
   transition: 1s 1s;
 }
 
-.fullscreen .show.projects-swiper-slide__text-animation {
+.isSelected .projects-swiper-slide__text-animation {
   height: 2rem;
   transition: 1s 1.3s;
+}
+
+.isSelected.projects .projects-swiper-slide__wrapper img {
+  transform: scale(1) !important;
+  transition: 1s 0.5s;
+}
+
+.projects.isSelected .projects-swiper-slide__button-anchor .animation-button-height {
+  height: 19rem !important;
+  transition: 1s 1s;
+}
+
+.projects.isSelected .projects-swiper-slide__button-anchor .main-view__arrow {
+  height: 1.7rem !important;
+  transition: 1s 1.5s;
+}
+
+.projects.isSelected .projects-swiper-slide__button-anchor .main-view__button-text {
+  height: 4rem !important;
+  transition: 1s 1.5s;
+}
+
+.isSelected.projects .projects__gray-line .gray-line {
+  width: 100%;
+  transition: 1s 1s;
 }
 
 .intoAnimation.projects-section .animation-button-height {
