--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -57,6 +57,7 @@ a a:visited {
 section {
   position: relative;
   overflow-x: hidden;
+  overflow-y: hidden;
   width: 100vw;
   min-height: 100vh;
 }
@@ -673,9 +674,11 @@ section.main-view {
 }
 .supervisors__gray-line {
   height: 1px;
-  width: 0;
-  background-color: rgba(20, 14, 10, 0.16);
+  width: 100%;
   flex-shrink: 0;
+}
+.supervisors__gray-line .gray-line {
+  background-color: rgba(20, 14, 10, 0.16);
   transition: 0.3s;
 }
 .supervisors__type {
@@ -1203,10 +1206,12 @@ section.main-view {
 }
 .steps__gray-line {
   height: 1px;
-  width: 0;
+  width: 100%;
   position: absolute;
   left: 0;
   top: 16.5rem;
+}
+.steps__gray-line .gray-line {
   background-color: rgba(20, 14, 10, 0.16);
   transition: 0.3s;
 }
@@ -1237,10 +1242,12 @@ section.main-view {
   margin-bottom: 1.5rem;
 }
 .steps-list__gray-line {
-  width: 0;
+  width: 100%;
   height: 1px;
-  background-color: rgba(20, 14, 10, 0.16);
   margin: 1.5rem 0 1.5rem;
+}
+.steps-list__gray-line .gray-line {
+  background-color: rgba(20, 14, 10, 0.16);
   transition: 0.3s;
 }
 .steps-list__img {
@@ -1323,11 +1330,13 @@ section.main-view {
 .piter__gray-line {
   position: absolute;
   height: 1px;
-  background-color: rgba(20, 14, 10, 0.16);
-  width: 0;
-  transition: 0.3s;
+  width: 100%;
   top: 23rem;
   left: 0;
+}
+.piter__gray-line .gray-line {
+  background-color: rgba(20, 14, 10, 0.16);
+  transition: 0.3s;
 }
 .piter__scroll {
   padding-top: 10rem;
@@ -1480,7 +1489,6 @@ section.main-view {
   top: 6rem;
   right: 5.4rem;
   color: #FFFEF8;
-  text-shadow: 1px 1px 1px black;
   z-index: 10;
 }
 .result-swiper__slide {
@@ -1889,10 +1897,12 @@ input.input-text, textarea.input-text {
 }
 .prices__gray-line {
   height: 1px;
-  background-color: rgba(255, 254, 248, 0.3);
-  width: 0;
-  transition: 0.3s;
+  width: 100%;
   margin: 1.3rem 0;
+}
+.prices__gray-line .gray-line {
+  background-color: rgba(255, 254, 248, 0.3);
+  transition: 0.3s;
 }
 .prices__bg {
   position: relative;
@@ -2002,9 +2012,11 @@ input.input-text, textarea.input-text {
 }
 .prices-design__gray-line {
   height: 1px;
-  background-color: rgba(20, 14, 10, 0.16);
-  width: 0;
+  width: 100%;
   margin: 1.5rem 0;
+}
+.prices-design__gray-line .gray-line {
+  background-color: rgba(20, 14, 10, 0.16);
   transition: 0.3s;
 }
 .prices-design__img {
@@ -2291,13 +2303,15 @@ input.input-text, textarea.input-text {
 }
 .price-assembly__gray-line {
   height: 1px;
-  width: 0;
-  background: rgba(20, 14, 10, 0.16);
+  width: 100%;
   position: absolute;
   right: 0;
   bottom: 6.4rem;
-  transition: 0.3s;
   z-index: 3;
+}
+.price-assembly__gray-line .gray-line {
+  background: rgba(20, 14, 10, 0.16);
+  transition: 0.3s;
 }
 .price-assembly__button-anchor {
   position: absolute;
@@ -2360,7 +2374,6 @@ input.input-text, textarea.input-text {
   text-transform: uppercase;
   letter-spacing: 0.04em;
   margin-bottom: 5.6rem;
-  text-shadow: black 1px 1px 1px;
 }
 .project__props {
   display: flex;
@@ -2385,11 +2398,13 @@ input.input-text, textarea.input-text {
 }
 .project__gray-line {
   height: 1px;
-  width: 0;
+  width: 100%;
   position: absolute;
-  background: rgba(255, 254, 248, 0.3);
   left: 0;
-  bottom: 6.3rem;
+  bottom: 6.7rem;
+}
+.project__gray-line .gray-line {
+  background: rgba(255, 254, 248, 0.3);
   transition: 0.3s;
 }
 .project__button-anchor {
@@ -2628,8 +2643,6 @@ input.input-text, textarea.input-text {
 
 .project-gallery__container {
   box-sizing: border-box;
-  padding: 14rem 0 6rem;
-  height: 100vh;
   position: relative;
   overflow: hidden;
 }
@@ -2640,8 +2653,7 @@ input.input-text, textarea.input-text {
   width: 172.8rem;
   margin: 0 auto;
   box-sizing: border-box;
-  height: 100vh;
-  padding-bottom: 20rem;
+  padding-bottom: 4rem;
   display: flex;
   justify-content: space-between;
 }
@@ -2667,7 +2679,6 @@ input.input-text, textarea.input-text {
 .project-gallery__img-big-animation {
   position: relative;
   overflow: hidden;
-  height: 0;
   transition: 0.3s;
 }
 .project-gallery__img-big img {
@@ -2683,7 +2694,6 @@ input.input-text, textarea.input-text {
 .project-gallery__img-animation {
   position: relative;
   overflow: hidden;
-  height: 0;
   transition: 0.3s;
 }
 .project-gallery__img img {
@@ -2780,7 +2790,6 @@ input.input-text, textarea.input-text {
   text-transform: uppercase;
   letter-spacing: 0.04em;
   margin-bottom: 2.6rem;
-  text-shadow: black 1px 1px 1px;
 }
 .about-section__button-anchor {
   position: absolute;
@@ -2791,11 +2800,13 @@ input.input-text, textarea.input-text {
 }
 .about-section__gray-line {
   height: 1px;
-  width: 0;
-  background: rgba(255, 254, 248, 0.3);
+  width: 100%;
   position: absolute;
   top: 8rem;
   left: 0;
+}
+.about-section__gray-line .gray-line {
+  background: rgba(255, 254, 248, 0.3);
   transition: 0.3s;
 }
 
@@ -3113,7 +3124,9 @@ input.input-text, textarea.input-text {
   position: absolute;
   left: -9.6rem;
   height: 1px;
-  width: 0;
+  width: 100vw;
+}
+.design-main__gray-line .gray-line {
   background: rgba(255, 254, 248, 0.3);
   transition: 0.3s;
 }
@@ -3285,12 +3298,14 @@ input.input-text, textarea.input-text {
 }
 .design-components__gray-line {
   height: 1px;
-  width: 0;
-  background: rgba(20, 14, 10, 0.16);
+  width: 100%;
   position: absolute;
   left: 0;
   bottom: 22.4rem;
   z-index: 2;
+}
+.design-components__gray-line .gray-line {
+  background: rgba(20, 14, 10, 0.16);
   transition: 0.3s;
 }
 .design-components__right {
@@ -3637,11 +3652,13 @@ input.input-text, textarea.input-text {
 }
 .complectation__gray-line {
   height: 1px;
-  width: 0;
-  background: rgba(255, 254, 248, 0.3);
+  width: 100%;
   position: absolute;
   left: 0;
   bottom: 21.6rem;
+}
+.complectation__gray-line .gray-line {
+  background: rgba(255, 254, 248, 0.3);
 }
 .complectation__button-anchor {
   position: absolute;
@@ -3775,14 +3792,15 @@ input.input-text, textarea.input-text {
   line-height: 1;
   text-transform: uppercase;
   letter-spacing: 0.04em;
-  text-shadow: black 1px 1px 1px;
 }
 .vision-main__gray-line {
   position: absolute;
   bottom: 25rem;
   left: 0;
   height: 1px;
-  width: 0;
+  width: 100%;
+}
+.vision-main__gray-line .gray-line {
   background: rgba(255, 254, 248, 0.3);
   transition: 0.3s;
 }
@@ -3861,11 +3879,13 @@ input.input-text, textarea.input-text {
 }
 .architecture-main__gray-line {
   height: 1px;
-  width: 0;
-  background: rgba(255, 254, 248, 0.3);
+  width: 100%;
   position: absolute;
   left: 0;
   bottom: 21.6rem;
+}
+.architecture-main__gray-line .gray-line {
+  background: rgba(255, 254, 248, 0.3);
 }
 .architecture-main__button-anchor {
   position: absolute;
@@ -3873,6 +3893,10 @@ input.input-text, textarea.input-text {
   height: 38rem;
   left: 9.6rem;
   bottom: 14.1rem;
+}
+
+.about-advantages__gray-line .gray-line {
+  transition: 1s 0s !important;
 }
 
 .intoAnimation .architecture-main__bg-animation {
