--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -61,6 +61,7 @@ a {
 section {
   position: relative;
   overflow-x: hidden;
+  overflow-y: hidden;
   width: 100vw;
   min-height: 100vh;
   &.main-view {
@@ -689,10 +690,12 @@ section {
   }
   &__gray-line {
     height: 1px;
-    width: 0;
-    background-color: rgba(20, 14, 10, 0.16);
+    width: 100%;
     flex-shrink: 0;
-    transition: 0.3s;
+    .gray-line {
+      background-color: rgba(20, 14, 10, 0.16);
+      transition: 0.3s;
+    }
   }
   &__type {
     text-transform: uppercase;
@@ -1231,12 +1234,14 @@ section {
   }
   &__gray-line {
     height: 1px;
-    width: 0;
+    width: 100%;
     position: absolute;
     left: 0;
     top: 16.5rem;
-    background-color: rgba(20, 14, 10, 0.16);
-    transition: 0.3s;
+    .gray-line {
+      background-color: rgba(20, 14, 10, 0.16);
+      transition: 0.3s;
+    }
   }
 }
 
@@ -1265,11 +1270,13 @@ section {
     margin-bottom: 1.5rem;
   }
   &__gray-line {
-    width: 0;
+    width: 100%;
     height: 1px;
-    background-color: rgba(20, 14, 10, 0.16);
     margin: 1.5rem 0 1.5rem;
-    transition: 0.3s;
+    .gray-line {
+      background-color: rgba(20, 14, 10, 0.16);
+      transition: 0.3s;
+    }
   }
   &__img {
     display: flex;
@@ -1353,11 +1360,13 @@ section {
   &__gray-line {
     position: absolute;
     height: 1px;
-    background-color: rgba(20, 14, 10, 0.16);
-    width: 0;
-    transition: 0.3s;
+    width: 100%;
     top: 23rem;
     left: 0;
+    .gray-line {
+      background-color: rgba(20, 14, 10, 0.16);
+      transition: 0.3s;
+    }
   }
   &__scroll {
     padding-top: 10rem;
@@ -1510,7 +1519,6 @@ section {
     top: 6rem;
     right: 5.4rem;
     color: $primary-light-color;
-    text-shadow: 1px 1px 1px black;
     z-index: 10;
   }
   &__slide {
@@ -1927,10 +1935,12 @@ input.input-text, textarea.input-text {
   }
   &__gray-line {
     height: 1px;
-    background-color: rgba(255, 254, 248, 0.3);
-    width: 0;
-    transition: 0.3s;
+    width: 100%;
     margin: 1.3rem 0;
+    .gray-line {
+      background-color: rgba(255, 254, 248, 0.3);
+      transition: 0.3s;
+    }
   }
   &__bg {
     position: relative;
@@ -2040,10 +2050,12 @@ input.input-text, textarea.input-text {
   }
   &__gray-line {
     height: 1px;
-    background-color: rgba(20, 14, 10, 0.16);
-    width: 0;
+    width: 100%;
     margin: 1.5rem 0;
-    transition: 0.3s;
+    .gray-line {
+      background-color: rgba(20, 14, 10, 0.16);
+      transition: 0.3s;
+    }
   }
   &__img {
     width: 54.7rem;
@@ -2337,13 +2349,15 @@ input.input-text, textarea.input-text {
   }
   &__gray-line {
     height: 1px;
-    width: 0;
-    background: rgba(20, 14, 10, 0.16);
+    width: 100%;
     position: absolute;
     right: 0;
     bottom: 6.4rem;
-    transition: 0.3s;
     z-index: 3;
+    .gray-line {
+      background: rgba(20, 14, 10, 0.16);
+      transition: 0.3s;
+    }
   }
   &__button-anchor {
     position: absolute;
@@ -2410,7 +2424,6 @@ input.input-text, textarea.input-text {
     text-transform: uppercase;
     letter-spacing: 0.04em;
     margin-bottom: 5.6rem;
-    text-shadow: black 1px 1px 1px;
   }
   &__props {
     display: flex;
@@ -2435,12 +2448,14 @@ input.input-text, textarea.input-text {
   }
   &__gray-line {
     height: 1px;
-    width: 0;
+    width: 100%;
     position: absolute;
-    background: rgba(255, 254, 248, 0.3);
     left: 0;
-    bottom: 6.3rem;
-    transition: 0.3s;
+    bottom: 6.7rem;
+    .gray-line {
+      background: rgba(255, 254, 248, 0.3);
+      transition: 0.3s;
+    }
   }
   &__button-anchor {
     position: absolute;
@@ -2685,8 +2700,6 @@ input.input-text, textarea.input-text {
 .project-gallery {
   &__container {
     box-sizing: border-box;
-    padding: 14rem 0 6rem;
-    height: 100vh;
     position: relative;
     overflow: hidden;
     &-animation {
@@ -2697,8 +2710,7 @@ input.input-text, textarea.input-text {
     width: 172.8rem;
     margin: 0 auto;
     box-sizing: border-box;
-    height: 100vh;
-    padding-bottom: 20rem;
+    padding-bottom: 4rem;
     display: flex;
     justify-content: space-between;
   }
@@ -2723,7 +2735,6 @@ input.input-text, textarea.input-text {
     &-animation {
       position: relative;
       overflow: hidden;
-      height: 0;
       transition: 0.3s;
     }
     img {
@@ -2739,7 +2750,6 @@ input.input-text, textarea.input-text {
     &-animation {
       position: relative;
       overflow: hidden;
-      height: 0;
       transition: 0.3s;
     }
     img {
@@ -2833,7 +2843,6 @@ input.input-text, textarea.input-text {
     text-transform: uppercase;
     letter-spacing: 0.04em;
     margin-bottom: 2.6rem;
-    text-shadow: black 1px 1px 1px;
   }
   &__button-anchor {
     position: absolute;
@@ -2844,12 +2853,14 @@ input.input-text, textarea.input-text {
   }
   &__gray-line {
     height: 1px;
-    width: 0;
-    background: rgba(255, 254, 248, 0.3);
+    width: 100%;
     position: absolute;
     top: 8rem;
     left: 0;
-    transition: 0.3s;
+    .gray-line {
+      background: rgba(255, 254, 248, 0.3);
+      transition: 0.3s;
+    }
   }
 }
 
@@ -3162,9 +3173,11 @@ input.input-text, textarea.input-text {
     position: absolute;
     left: -9.6rem;
     height: 1px;
-    width: 0;
-    background: rgba(255, 254, 248, 0.3);
-    transition: 0.3s;
+    width: 100vw;
+    .gray-line {
+      background: rgba(255, 254, 248, 0.3);
+      transition: 0.3s;
+    }
   }
   &__content {
     box-sizing: border-box;
@@ -3343,13 +3356,15 @@ input.input-text, textarea.input-text {
   }
   &__gray-line {
     height: 1px;
-    width: 0;
-    background: rgba(20, 14, 10, 0.16);
+    width: 100%;
     position: absolute;
     left: 0;
     bottom: 22.4rem;
     z-index: 2;
-    transition: 0.3s;
+    .gray-line {
+      background: rgba(20, 14, 10, 0.16);
+      transition: 0.3s;
+    }
   }
   &__right {
     position: relative;
@@ -3704,11 +3719,13 @@ input.input-text, textarea.input-text {
   }
   &__gray-line {
     height: 1px;
-    width: 0;
-    background: rgba(255, 254, 248, 0.3);
+    width: 100%;
     position: absolute;
     left: 0;
     bottom: 21.6rem;
+    .gray-line {
+      background: rgba(255, 254, 248, 0.3);
+    }
   }
   &__button-anchor {
     position: absolute;
@@ -3850,16 +3867,17 @@ input.input-text, textarea.input-text {
     line-height: 1;
     text-transform: uppercase;
     letter-spacing: 0.04em;
-    text-shadow: black 1px 1px 1px;
   }
   &__gray-line {
     position: absolute;
     bottom: 25rem;
     left: 0;
     height: 1px;
-    width: 0;
-    background: rgba(255, 254, 248, 0.3);
-    transition: 0.3s;
+    width: 100%;
+    .gray-line {
+      background: rgba(255, 254, 248, 0.3);
+      transition: 0.3s;
+    }
   }
   &__button-anchor {
     position: absolute;
@@ -3938,11 +3956,14 @@ input.input-text, textarea.input-text {
   }
   &__gray-line {
     height: 1px;
-    width: 0;
-    background: rgba(255, 254, 248, 0.3);
+    width: 100%;
+
     position: absolute;
     left: 0;
     bottom: 21.6rem;
+    .gray-line {
+      background: rgba(255, 254, 248, 0.3);
+    }
   }
   &__button-anchor {
     position: absolute;
@@ -3951,6 +3972,10 @@ input.input-text, textarea.input-text {
     left: 9.6rem;
     bottom: 14.1rem;
   }
+}
+
+.about-advantages__gray-line .gray-line {
+  transition: 1s 0s !important;
 }
 
 .intoAnimation .architecture-main__bg-animation {
