--- a/src/assets/scss/mobile5.scss
+++ b/src/assets/scss/mobile5.scss
@@ -233,17 +233,49 @@ $vh: calc(100vh/700);
     z-index: 10001;
   }
 
+  .mob-phone {
+    opacity: 1;
+    transition: 1s;
+  }
+
+  .projects .white-cross {
+    position: fixed;
+    z-index: 11002;
+    top: 2.6rem;
+  }
+
   .header {
     margin: 0;
     padding-top: 1.6rem;
     padding-bottom: 1.6rem;
+    transition: width 0s;
     path {
-      fill: $primary-dark-color;
+      fill: $primary-light-color;
     }
     .mob-header-icon path {
-      stroke: $primary-dark-color;
+      stroke: $primary-light-color;
     }
-    &.white {
+    &.hide-phone {
+      width: 35.3rem;
+      transition: width 0s;
+      .mob-phone {
+        position: relative;
+        overflow: hidden;
+        opacity: 0;
+        transition: opacity 0s;
+      }
+      .header__container {
+        width: 33.7rem;
+        margin: 0 0 0 1.6rem;
+        transition: margin-right 0s;
+        overflow: hidden;
+      }
+      .logo {
+        position: relative;
+        left: 1.2rem;
+      }
+    }
+    &.white-bg {
       &.menu-is-open {
         path {
           fill: $primary-dark-color;
@@ -253,11 +285,12 @@ $vh: calc(100vh/700);
         }
       }
       path {
-        fill: $primary-light-color;
+        fill: $primary-dark-color;
       }
       .mob-header-icon path {
-        stroke: $primary-light-color;
+        stroke: $primary-dark-color;
       }
+      background-color: white;
     }
   }
 
@@ -572,6 +605,79 @@ $vh: calc(100vh/700);
     top: 0;
     left: 0;
     transition: 0.3s;
+  }
+
+  .modal-box {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    z-index: 20000;
+    background-color: $primary-light-color;
+    transform: translateX(-105%);
+    transition: 0.3s;
+    &.show-modal {
+      transform: translateX(0);
+      transition: 1s;
+      .mob-cross {
+        display: block;
+      }
+      .mob-cross-line {
+        opacity: 1;
+        transform: rotate(45deg);
+        transition: 1s 0.5s;
+        transform-origin: center;
+        &:last-child {
+          transform: rotate(-45deg);
+        }
+      }
+    }
+    .mob-cross {
+      position: relative;
+    }
+  }
+
+  .modal-content {
+    padding: 1.6rem 1.6rem 4rem;
+    &__top {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      margin-bottom: 1.6rem;
+    }
+    &__bottom {
+      position: relative;
+      overflow: hidden;
+      height: available;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: top;
+      }
+    }
+  }
+
+  .feedback-modal {
+    &__title {
+      font-family: 'Forum', serif;
+      font-size: 3.2rem;
+      line-height: 1.1;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+      margin-bottom: 4rem;
+    }
+    &__form {
+      input {
+        padding-bottom: 1.2rem;
+        margin-bottom: 4rem;
+        width: 100%;
+        &:last-child {
+          margin-bottom: 6rem;
+        }
+      }
+    }
   }
 
   .menu-is-open {
@@ -2660,7 +2766,7 @@ $vh: calc(100vh/700);
   }
   .header {
     opacity: 1;
-    transition: 1s;
+    transition: opacity 1s, width 0s;
   }
 }
 
