--- a/src/assets/scss/mobile5.css
+++ b/src/assets/scss/mobile5.css
@@ -206,7 +206,7 @@
   .projects .white-cross {
     position: fixed;
     z-index: 11002;
-    top: 2.6rem;
+    top: 2.5rem;
   }
   .header {
     margin: 0;
@@ -487,10 +487,6 @@
   .intoAnimation.projects-section .animation-button-height {
     height: 19.5rem;
   }
-  .projects-section {
-    padding-top: 10rem;
-    margin-bottom: 8rem;
-  }
   .mob-cross {
     width: 2.4rem;
     height: 2.4rem;
@@ -520,8 +516,9 @@
   }
   .modal-box {
     position: fixed;
+    height: 0;
+    overflow: hidden;
     width: 100vw;
-    height: 100vh;
     left: 0;
     top: 0;
     z-index: 20000;
@@ -530,6 +527,7 @@
     transition: 0.3s;
   }
   .modal-box.show-modal {
+    height: 100vh;
     transform: translateX(0);
     transition: 1s;
   }
