--- a/src/assets/scss/mobile5.css
+++ b/src/assets/scss/mobile5.css
@@ -1230,6 +1230,7 @@
     position: relative;
     overflow: hidden;
     transition: 1s;
+    margin-bottom: 0;
   }
   .steps-list__items {
     position: relative;
@@ -2335,9 +2336,6 @@
     width: 100%;
     height: 26rem;
   }
-  .intoAnimation .interiors-swiper-slide__img-animation {
-    height: 26rem;
-  }
   .interiors.compl .interiors-swiper-slide__item:first-child .interiors-swiper-slide__content {
     padding-top: 2.4rem;
     width: 36.1rem;
@@ -2355,13 +2353,16 @@
     position: relative;
   }
   .design-main {
-    margin-bottom: 8rem;
+    height: 100vh;
   }
   .design-main__content {
     padding: 0;
     height: auto;
     width: 100%;
     left: 0;
+  }
+  .interiors-swiper-slide__content {
+    width: 36.1rem;
   }
   .about-advantages__item-wrapper {
     padding: 0 1.6rem;
@@ -2505,6 +2506,9 @@
   }
   .interiors.design .interiors-swiper-slide__content-text {
     width: 36.1rem;
+  }
+  .interiors-swiper-slide__item:last-child {
+    display: none;
   }
   .vision-main__content {
     margin: 0 auto;
